2004-11-12 Tim Waugh  <twaugh@redhat.com>
	* src/plugins/Ancestors.py (person_name): Handle surname prefix (patch
	from Julio Sanchez).

2004-11-11 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/DateDisplay.py: Add Russian displayer.

2004-11-10 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/DateHandler.py: Add Russian displayer.
	* src/DateParser.py: Correct parsers -- proper unicode conversions.
	* src/DateDisplay.py: Add Russian displayer.

2004-11-10  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EditPerson.py: handle the new "dont-ask" key
	* src/GrampsGconfKeys.py: handle the new "dont-ask" key
	* src/ImageSelect.py: remove debugging statements
	* src/Marriage.py: handle the new "dont-ask" key
	* src/QuestionDialog.py: handle the new "dont-ask" key
	* src/gramps.glade: added "dont ask" button to SaveDialog
	to turn off the nagging
	* src/data/gramps.schemas: added the "dont-ask" key

2004-11-09  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: fix goto_active_person
	* src/DateParser.py: Handle month=12 in gregorian_valid

2004-11-09 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/WriteGedcom.py: Remove extraneous import.

	* src/DateHandler.py: Start adding handlers for Russian.
	* src/DateParser.py: Start adding handlers for Russian.

2004-11-08  Don Allingham  <dallingham@users.sourceforge.net>
	* src/DateHandler.py: add handlers for fr_FR
	* src/DateParser.py: add parser for french
	* src/DateDisplay.py: add displayer for french

2004-11-08  Steve Swales  <Steve.Swales@sun.com>
	* src/gramps.py: Better way of setting locale
	* src/DateHandler.py: Better locate settings

2004-11-08 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/data/Makefile.am: Remove gramps.desktop from
        dist_pkgdata_DATA which was causing it to get installed
        under .../share/gramps.

2004-11-07  Don Allingham  <dallingham@users.sourceforge.net>
	* src/ImageSelect.py: load global note in a read only buffer